# smart-ragflow

./: .dockerignore  .env.docker  .env.example  .gitignore  DOCKER_DEPLOY.md  README.md  TMP.md  deepdoc_parser_analysis.md  docker-compose.yml  pyproject.toml  start_all.py  业务实现1.md  业务实现2.md  前端需求.md  框架搭建.md
backend_QA/: Dockerfile  main.py
backend_QA/api/: auth.py  chat.py  history.py  (+1 more)
backend_admin/: .dockerignore  Dockerfile  README.md  __init__.py  main.py
backend_common/: __init__.py  config.py  database.py  models.py
backend_parser/: .dockerignore  Dockerfile  README.md  __init__.py  chunker.py  cli.py  config.py  deepdoc_parser.py  document_models.py  embedding.py  file_downloader.py  minio_client.py  opensearch_client.py  requirements.txt  service.py  worker.py
client/: main.py
common/: __init__.py  config.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  README.md
frontend-QA/: package.json
frontend-admin/: README.md  index.html  vite.config.js
frontend_QA/: .dockerignore  .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  vite.config.js
frontend_admin/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.js
parser/: __init__.py  chunker.py  cli.py  config.py  deepdoc_parser.py  embedding.py  file_downloader.py  minio_client.py  models.py  opensearch_client.py  service.py  tokenizer.py
scripts/: build-images.sh  create_chat_history_table.sql  deploy.sh  init.sql  migrate_chat_history.sql  migrate_user_system.sql  setup_user_system.md  stop-containers.sh
(+49 files in other folders)
